--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.2",
     "gatsby-source-filesystem": "^2.3.1",
+    "gatsby-source-instagram": "^0.8.0",
     "gatsby-transformer-sharp": "^2.5.2",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
-    "react-bootstrap": "^1.3.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0"
   },
