--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "bootstrap": "^4.5.2",
     "gatsby": "^2.21.22",
+    "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-offline": "^3.2.1",
@@ -21,9 +22,11 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.12.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.0.0"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "prettier": "2.0.5",
     "resolve-url-loader": "^3.1.0"
   },
