--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby": "^2.21.22",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.3",
+    "gatsby-plugin-google-analytics": "^2.4.0",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-react-helmet": "^3.3.1",
