--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "wheels-forgotten",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Wheels Forgotten",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Rob Sturcke <rob.emil.sturcke@gmail.com>",
   "dependencies": {
-    "bootstrap": "^4.5.2",
-    "gatsby": "^2.21.22",
-    "gatsby-background-image": "^1.1.2",
-    "gatsby-image": "^2.4.3",
-    "gatsby-plugin-google-analytics": "^2.4.0",
-    "gatsby-plugin-manifest": "^2.4.2",
-    "gatsby-plugin-offline": "^3.2.1",
-    "gatsby-plugin-react-helmet": "^3.3.1",
-    "gatsby-plugin-sass": "^2.3.12",
-    "gatsby-plugin-sharp": "^2.6.2",
-    "gatsby-source-filesystem": "^2.3.1",
-    "gatsby-source-instagram": "^0.8.0",
-    "gatsby-transformer-sharp": "^2.5.2",
-    "node-sass": "^4.14.1",
+    "bootstrap": "^4.6.0",
+    "gatsby": "^3.4.0",
+    "gatsby-image": "^3.4.0",
+    "gatsby-plugin-gatsby-cloud": "^2.4.1",
+    "gatsby-plugin-google-analytics": "^3.4.0",
+    "gatsby-plugin-image": "^1.4.0",
+    "gatsby-plugin-manifest": "^3.4.0",
+    "gatsby-plugin-offline": "^4.4.0",
+    "gatsby-plugin-react-helmet": "^4.4.0",
+    "gatsby-plugin-sass": "^4.4.0",
+    "gatsby-plugin-sharp": "^3.4.0",
+    "gatsby-source-filesystem": "^3.4.0",
+    "gatsby-source-instagram-all": "^4.1.0",
+    "gatsby-transformer-sharp": "^3.4.0",
+    "lodash": "^4.17.21",
+    "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
+    "react-dom": "^17.0.1",
     "react-google-recaptcha": "^2.1.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "prettier": "2.0.5",
-    "resolve-url-loader": "^3.1.0"
+    "prettier": "2.2.1"
   },
   "keywords": [
     "gatsby"
   ],
-  "license": "MIT",
+  "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
